CHANGELOG
===========
cody - created project
sam - created tasks model
sam - updated homepage to include remaining tasks and the table to tasks
cody - Created the views/ Job 3
sam - created maintenance page
cody - completed task 5
sam - paginated the maintenence
sam - Added changing roles
sam - Added checkboxes to work
cody - Added the clickable boxes on maintenance
cody - added a task maintenance button
cody - added "polish"
cody - added unit tests